# ExplainingExplanations

./: .gitignore  Base copy.ipynb  Base.ipynb  Explainations.ipynb  Explanations-3.ipynb  Explanations.ipynb  QualitativeAnalysis.ipynb  README.md  Small.ipynb  T5Training.ipynb  a.diff  explainations.conllu  explainations.txt  plots.ipynb  pyproject.toml  requirements.txt  requirements_colab.txt  results.txt  shuffled_explainations.txt
src/: preprocess.py  profiling.py  sbert_metric.py  utils.py
